--- a/PlugHub/App.axaml
+++ b/PlugHub/App.axaml
@@ -1,10 +1,10 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:fs="using:FluentAvalonia.Styling"
              x:Class="PlugHub.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-  
-    <Application.Styles>
-        <FluentTheme />
-    </Application.Styles>
+  <Application.Styles>
+    <fs:FluentAvaloniaTheme PreferUserAccentColor="True" PreferSystemTheme="True"/>
+  </Application.Styles>
 </Application>
