--- a/PlugHub/Views/MainView.axaml
+++ b/PlugHub/Views/MainView.axaml
@@ -2,15 +2,59 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="clr-namespace:PlugHub.ViewModels"
+             xmlns:v="using:PlugHub.Views"
+             xmlns:vm="using:PlugHub.ViewModels"
+             xmlns:ui="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
+             
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             
              x:Class="PlugHub.Views.MainView"
              x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel />
-  </Design.DataContext>
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="32" />
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
 
-  <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Border VerticalAlignment="Top" Name="HeaderBorder">
+      <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="16 8 0 0">
+        <Button Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Command="{Binding AppIconClickedCommand}" Padding="0" Margin="0 2 0 0">
+          <Image Source="avares://PlugHub/Assets/avalonia-logo.ico" Width="16" Height="16"/>
+        </Button>
+      </StackPanel>
+    </Border>
+
+    <!-- NavigationView -->
+    <ui:NavigationView Grid.Row="1"
+                       IsPaneOpen="{Binding IsPaneOpen}"
+                       MenuItemsSource="{Binding MainPageItemSource}"
+                       SelectedItem="{Binding SelectedMainPageItem}"
+                       SelectionChanged="OnNavigationView_SelectionChanged">
+      <ui:NavigationView.Resources>
+        <DataTemplate x:Key="MainPageItemTemplate">
+          <ui:NavigationViewItem Content="{Binding Label}">
+            <ui:NavigationViewItem.IconSource>
+              <ui:PathIconSource Data="{Binding Icon}"/>
+            </ui:NavigationViewItem.IconSource>
+          </ui:NavigationViewItem>
+        </DataTemplate>
+      </ui:NavigationView.Resources>
+
+      <ui:NavigationView.MenuItemTemplate>
+        <StaticResource ResourceKey="MainPageItemTemplate"/>
+      </ui:NavigationView.MenuItemTemplate>
+
+      <ui:NavigationView.Content>
+        <Border CornerRadius="16 0 0 0">
+          <TransitioningContentControl Content="{Binding SelectedMainPageContent}"/>
+        </Border>
+      </ui:NavigationView.Content>
+    </ui:NavigationView>
+
+    <Border x:Name="ModalOverlay"
+            Grid.RowSpan="2"
+            Background="#80000000"
+            IsHitTestVisible="{Binding IsModalOverlayVisible}"
+            IsVisible="{Binding IsModalOverlayVisible}" />
+  </Grid>
 </UserControl>
