✨ Added initial UI integration and plugin manager (#77)
resolves #69
resolves #70
resolves #71
resolves #72

--- a/PlugHub/Views/MainView.axaml
+++ b/PlugHub/Views/MainView.axaml
@@ -27,7 +27,7 @@
     <!-- NavigationView -->
     <ui:NavigationView Grid.Row="1"
                        IsPaneOpen="{Binding IsPaneOpen}"
-                       MenuItemsSource="{Binding MainPageItemSource}"
+                       MenuItemsSource="{Binding MainPageItems}"
                        SelectedItem="{Binding SelectedMainPageItem}"
                        SelectionChanged="OnNavigationView_SelectionChanged">
       <ui:NavigationView.Resources>
