--- a/PlugHub/Views/Windows/MainWindow.axaml
+++ b/PlugHub/Views/Windows/MainWindow.axaml
@@ -3,4 +3,5 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:Class="PlugHub.Views.Windows.MainWindow"
+        Icon="/Assets/avalonia-logo.ico"
         MinWidth="800" MinHeight="450"/>
