--- a/PlugHub/Views/MainView.axaml
+++ b/PlugHub/Views/MainView.axaml
@@ -2,59 +2,161 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:v="using:PlugHub.Views"
              xmlns:vm="using:PlugHub.ViewModels"
-             xmlns:ui="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
-             
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             
+             mc:Ignorable="d"
+             d:DesignWidth="800"
+             d:DesignHeight="600"
              x:Class="PlugHub.Views.MainView"
              x:DataType="vm:MainViewModel">
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="32" />
-      <RowDefinition Height="*" />
-    </Grid.RowDefinitions>
 
-    <Border VerticalAlignment="Top" Name="HeaderBorder">
-      <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="16 8 0 0">
-        <Button Background="Transparent" BorderBrush="Transparent" BorderThickness="0" Command="{Binding AppIconClickedCommand}" Padding="0" Margin="0 2 0 0">
-          <Image Source="avares://PlugHub/Assets/avalonia-logo.ico" Width="16" Height="16"/>
-        </Button>
-      </StackPanel>
-    </Border>
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.ThemeDictionaries>
+				<!-- Dark -->
+				<ResourceDictionary x:Key="Dark">
+					<SolidColorBrush x:Key="CloseHoverBrush" Color="#9A101A"/>
+					<SolidColorBrush x:Key="ClosePressedBrush" Color="#700A12"/>
+				</ResourceDictionary>
 
-    <!-- NavigationView -->
-    <ui:NavigationView Grid.Row="1"
-                       IsPaneOpen="{Binding IsPaneOpen}"
-                       MenuItemsSource="{Binding MainPageItems}"
-                       SelectedItem="{Binding SelectedMainPageItem}"
-                       SelectionChanged="OnNavigationView_SelectionChanged">
-      <ui:NavigationView.Resources>
-        <DataTemplate x:Key="MainPageItemTemplate">
-          <ui:NavigationViewItem Content="{Binding Label}">
-            <ui:NavigationViewItem.IconSource>
-              <ui:PathIconSource Data="{Binding Icon}"/>
-            </ui:NavigationViewItem.IconSource>
-          </ui:NavigationViewItem>
-        </DataTemplate>
-      </ui:NavigationView.Resources>
+				<!-- Light -->
+				<ResourceDictionary x:Key="Light">
+					<SolidColorBrush x:Key="CloseHoverBrush" Color="#E81123"/>
+					<SolidColorBrush x:Key="ClosePressedBrush" Color="#C50F1F"/>
+				</ResourceDictionary>
+			</ResourceDictionary.ThemeDictionaries>
+		</ResourceDictionary>
+	</UserControl.Resources>
 
-      <ui:NavigationView.MenuItemTemplate>
-        <StaticResource ResourceKey="MainPageItemTemplate"/>
-      </ui:NavigationView.MenuItemTemplate>
+	<UserControl.Styles>
 
-      <ui:NavigationView.Content>
-        <Border CornerRadius="16 0 0 0">
-          <TransitioningContentControl Content="{Binding SelectedMainPageContent}"/>
-        </Border>
-      </ui:NavigationView.Content>
-    </ui:NavigationView>
+		<!-- Base style -->
+		<Style Selector="Button.MyCaption">
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="BorderBrush" Value="Transparent"/>
+			<Setter Property="Foreground" Value="White"/>
+			<Setter Property="Width" Value="48"/>
+			<Setter Property="Height" Value="32"/>
+			<Setter Property="HorizontalContentAlignment" Value="Center"/>
+			<Setter Property="VerticalContentAlignment" Value="Center"/>
+		</Style>
+	</UserControl.Styles>
 
-    <Border x:Name="ModalOverlay"
-            Grid.RowSpan="2"
-            Background="#80000000"
-            IsHitTestVisible="{Binding IsModalOverlayVisible}"
-            IsVisible="{Binding IsModalOverlayVisible}" />
-  </Grid>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="32"/>
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+
+		<!-- Custom Title Bar -->
+		<Border Grid.Row="0"
+				Background="Transparent"
+				Name="HeaderBorder"
+				PointerPressed="HeaderBorder_OnPointerPressed">
+
+			<DockPanel LastChildFill="True">
+
+				<!-- Left: icon + title -->
+				<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+					<Button Command="{Binding AppIconClickedCommand}"
+							Padding="0" Margin="8,0,0,0"
+							Background="Transparent" BorderThickness="0"
+							VerticalAlignment="Center">
+						<Image Source="{Binding AppIcon}"
+							   Width="16" Height="16"
+							   VerticalAlignment="Center"
+							   HorizontalAlignment="Center"/>
+					</Button>
+					<TextBlock Text="{Binding AppName}"
+							   FontSize="16"
+							   Margin="8,0,8,0"
+							   VerticalAlignment="Center"/>
+				</StackPanel>
+
+				<!-- Right: caption buttons -->
+				<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+
+					<!-- Settings -->
+					<Button Classes="MyCaption"
+							Command="{Binding OpenSettingsCommand}"
+							Margin="0,0,8,0"
+							ToolTip.Tip="Open Settings"
+							IsVisible="{Binding IsSettingsVisible}">
+						<Path Width="12" Height="12"
+							  Data="M12 7.9V6.5L10.6 5.8L10.1 4.3L11 3.4L9.8 2.2L8.9 3.1L7.4 2.6L6.7 1.2H5.3L4.6 2.6L3.1 3.1L2.2 2.2L1 3.4L1.9 4.3L1.4 5.8L0 6.5V7.9L1.4 8.6L1.9 10.1L1 11L2.2 12.2L3.1 11.3L4.6 11.8L5.3 13.2H6.7L7.4 11.8L8.9 11.3L9.8 12.2L11 11L10.1 10.1L10.6 8.6L12 7.9ZM6 9.6C4.7 9.6 3.6 8.5 3.6 7.2C3.6 5.9 4.7 4.8 6 4.8C7.3 4.8 8.4 5.9 8.4 7.2C8.4 8.5 7.3 9.6 6 9.6Z"
+							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+							  StrokeThickness="1"/>
+					</Button>
+
+					<!-- Home -->
+					<Button Classes="MyCaption"
+							Command="{Binding GoHomeCommand}"
+							Margin="0,0,8,0"
+							ToolTip.Tip="Return Home"
+							IsVisible="{Binding IsHomeVisible}">
+						<Path Width="12" Height="12"
+							  Data="M0 8 L6 2 L12 8 V14 H7 V10 H5 V14 H0 Z"
+							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+							  StrokeThickness="1"/>
+					</Button>
+
+					<!-- Minimize -->
+					<Button Classes="MyCaption"
+							Command="{Binding MinimizeCommand}">
+						<Rectangle Width="10" Height="2"
+								   Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+								   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					</Button>
+
+					<!-- Maximize -->
+					<Button Classes="MyCaption"
+							Command="{Binding MaximizeRestoreCommand}"
+							IsVisible="{Binding IsMaximizeVisible}">
+						<Path Width="10" Height="10"
+							  Data="M0 0 H10 V10 H0 Z"
+							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+							  StrokeThickness="1.5"
+							  Stretch="Uniform"
+							  HorizontalAlignment="Center"
+							  VerticalAlignment="Center"/>
+					</Button>
+
+					<!-- Restore -->
+					<Button Classes="MyCaption"
+							Command="{Binding MaximizeRestoreCommand}"
+							IsVisible="{Binding IsRestoreVisible}">
+						<Grid Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center">
+							<Path Data="M2 0 H10 V8 H2 Z"
+								  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+								  StrokeThickness="1.5"/>
+							<Path Data="M0 2 H8 V10 H0 Z"
+								  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+								  StrokeThickness="1.5"/>
+						</Grid>
+					</Button>
+
+					<!-- Close -->
+					<Button Classes="MyCaption"
+							Command="{Binding CloseCommand}">
+						<Path Width="10" Height="10"
+							  Data="M0 0 L10 10 M10 0 L0 10"
+							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
+							  StrokeThickness="1.5"
+							  StrokeLineCap="Square"
+							  Stretch="Uniform"
+							  HorizontalAlignment="Center"
+							  VerticalAlignment="Center"/>
+					</Button>
+
+				</StackPanel>
+			</DockPanel>
+		</Border>
+
+		<Border Grid.Row="1">
+			<TransitioningContentControl
+				Content="{Binding SelectedMainPageContent}"
+				HorizontalAlignment="Stretch"
+				VerticalAlignment="Stretch"/>
+		</Border>
+
+	</Grid>
 </UserControl>
