--- a/PlugHub/Views/Windows/MainWindow.axaml
+++ b/PlugHub/Views/Windows/MainWindow.axaml
@@ -1,9 +1,22 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        x:Class="PlugHub.Views.Windows.MainWindow"
-        Title="{Binding WindowTitle}"
-        Icon= "{Binding WindowIcon}"
-        MinWidth="{Binding WindowMinWidth}"
-		MinHeight="{Binding WindowMinHeight}"/>
+<Window
+	xmlns="https://github.com/avaloniaui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	x:Class="PlugHub.Views.Windows.MainWindow"
+	Title="{Binding WindowTitle}"
+	Icon="{Binding WindowIcon}"
+	MinWidth="{Binding WindowMinWidth}"
+	MinHeight="{Binding WindowMinHeight}"
+	Width="{Binding WindowWidth}"
+	Height="{Binding WindowHeight}"
+	WindowState="{Binding WindowStartupState}"
+	WindowStartupLocation="{Binding WindowStartupLocation}"
+	TransparencyLevelHint="{Binding TransparencyPreference}"
+	CanResize="{Binding CanResize}"
+	ShowInTaskbar="{Binding ShowInTaskbar}"
+	SystemDecorations="{Binding SystemDecorations}"
+	ExtendClientAreaToDecorationsHint="{Binding ExtendClientAreaToDecorationsHint}"
+	ExtendClientAreaTitleBarHeightHint="{Binding ExtendClientAreaTitleBarHeightHint}"
+	Background="{DynamicResource PlugHub.PrimaryBackgroundBrush}">
+</Window>
