--- a/PlugHub/Views/MainView.axaml
+++ b/PlugHub/Views/MainView.axaml
@@ -1,44 +1,47 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="using:PlugHub.ViewModels"
-             mc:Ignorable="d"
-             d:DesignWidth="800"
-             d:DesignHeight="600"
-             x:Class="PlugHub.Views.MainView"
-             x:DataType="vm:MainViewModel">
-
-	<UserControl.Resources>
-		<ResourceDictionary>
-			<ResourceDictionary.ThemeDictionaries>
-				<!-- Dark -->
-				<ResourceDictionary x:Key="Dark">
-					<SolidColorBrush x:Key="CloseHoverBrush" Color="#9A101A"/>
-					<SolidColorBrush x:Key="ClosePressedBrush" Color="#700A12"/>
-				</ResourceDictionary>
-
-				<!-- Light -->
-				<ResourceDictionary x:Key="Light">
-					<SolidColorBrush x:Key="CloseHoverBrush" Color="#E81123"/>
-					<SolidColorBrush x:Key="ClosePressedBrush" Color="#C50F1F"/>
-				</ResourceDictionary>
-			</ResourceDictionary.ThemeDictionaries>
-		</ResourceDictionary>
-	</UserControl.Resources>
+<UserControl
+	xmlns="https://github.com/avaloniaui"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:vm="using:PlugHub.ViewModels"
+			 
+	mc:Ignorable="d" d:DesignWidth="1230" d:DesignHeight="720"
+			 
+	x:Class="PlugHub.Views.MainView"
+	x:DataType="vm:MainViewModel"
+			 
+	Background="{DynamicResource PlugHub.PrimaryBackgroundBrush}">
 
 	<UserControl.Styles>
 
-		<!-- Base style -->
-		<Style Selector="Button.MyCaption">
+		<Style Selector="Button.HeaderButton">
 			<Setter Property="Background" Value="Transparent"/>
 			<Setter Property="BorderBrush" Value="Transparent"/>
-			<Setter Property="Foreground" Value="White"/>
-			<Setter Property="Width" Value="48"/>
+			<Setter Property="Width" Value="40"/>
 			<Setter Property="Height" Value="32"/>
-			<Setter Property="HorizontalContentAlignment" Value="Center"/>
-			<Setter Property="VerticalContentAlignment" Value="Center"/>
+			<Setter Property="Template">
+				<ControlTemplate>
+					<Border Background="{TemplateBinding Background}"
+							BorderBrush="{TemplateBinding BorderBrush}"
+							BorderThickness="{TemplateBinding BorderThickness}">
+						<ContentPresenter Content="{TemplateBinding Content}"
+										  ContentTemplate="{TemplateBinding ContentTemplate}"
+										  HorizontalAlignment="Center"
+										  VerticalAlignment="Center"/>
+					</Border>
+				</ControlTemplate>
+			</Setter>
 		</Style>
+
+		<Style Selector="Button.HeaderButton:pointerover">
+			<Setter Property="Background" Value="{DynamicResource PlugHub.AccentFillBrush}"/>
+			<Setter Property="Foreground" Value="{DynamicResource PlugHub.FillColorExitForegroundBrush}"/>
+		</Style>
+		<Style Selector="Button.HeaderButton.Close:pointerover">
+			<Setter Property="Background" Value="{DynamicResource PlugHub.FillColorExitBackgroundBrush}"/>
+			<Setter Property="Foreground" Value="{DynamicResource PlugHub.FillColorExitForegroundBrush}"/>
+		</Style>
+
 	</UserControl.Styles>
 
 	<Grid>
@@ -48,103 +51,113 @@
 		</Grid.RowDefinitions>
 
 		<!-- Custom Title Bar -->
-		<Border Grid.Row="0"
-				Background="Transparent"
-				Name="HeaderBorder"
-				PointerPressed="HeaderBorder_OnPointerPressed">
+		<Border
+			Grid.Row="0"
+			Background="Transparent"
+			Name="HeaderBorder"
+			PointerPressed="HeaderBorder_OnPointerPressed">
 
 			<DockPanel LastChildFill="True">
 
 				<!-- Left: icon + title -->
 				<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-					<Button Command="{Binding AppIconClickedCommand}"
-							Padding="0" Margin="8,0,0,0"
-							Background="Transparent" BorderThickness="0"
-							VerticalAlignment="Center">
-						<Image Source="{Binding AppIcon}"
-							   Width="16" Height="16"
-							   VerticalAlignment="Center"
-							   HorizontalAlignment="Center"/>
+					<Button
+						Command="{Binding AppIconClickedCommand}"
+						Width="32" Height="32"
+						Padding="0" Margin="0"
+						BorderBrush="Transparent"
+						Background="Transparent">
+						<Image
+							Source="{Binding AppIcon}"
+							Width="16" Height="16"/>
 					</Button>
-					<TextBlock Text="{Binding AppName}"
-							   FontSize="16"
-							   Margin="8,0,8,0"
-							   VerticalAlignment="Center"/>
+					<TextBlock
+						Text="{Binding AppName}"
+						Padding="0" Margin="0"
+						FontSize="16"
+						VerticalAlignment="Center"/>
 				</StackPanel>
 
-				<!-- Right: caption buttons -->
+				<!-- Right: HeaderButton buttons -->
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
 
 					<!-- Settings -->
-					<Button Classes="MyCaption"
-							Command="{Binding OpenSettingsCommand}"
-							Margin="0,0,8,0"
-							ToolTip.Tip="Open Settings"
-							IsVisible="{Binding IsSettingsVisible}">
-						<Path Width="12" Height="12"
-							  Data="M12 7.9V6.5L10.6 5.8L10.1 4.3L11 3.4L9.8 2.2L8.9 3.1L7.4 2.6L6.7 1.2H5.3L4.6 2.6L3.1 3.1L2.2 2.2L1 3.4L1.9 4.3L1.4 5.8L0 6.5V7.9L1.4 8.6L1.9 10.1L1 11L2.2 12.2L3.1 11.3L4.6 11.8L5.3 13.2H6.7L7.4 11.8L8.9 11.3L9.8 12.2L11 11L10.1 10.1L10.6 8.6L12 7.9ZM6 9.6C4.7 9.6 3.6 8.5 3.6 7.2C3.6 5.9 4.7 4.8 6 4.8C7.3 4.8 8.4 5.9 8.4 7.2C8.4 8.5 7.3 9.6 6 9.6Z"
-							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-							  StrokeThickness="1"/>
+					<Button
+						Classes="HeaderButton"
+						Command="{Binding OpenSettingsCommand}"
+						ToolTip.Tip="Open Settings"
+						IsVisible="{Binding IsSettingsVisible}">
+						<Path
+							Width="16" Height="16"
+							StrokeThickness="1"
+							Stretch="Uniform"
+							Data="{StaticResource PlugHub.SettingsIconGeometry}"
+							Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 					</Button>
 
 					<!-- Home -->
-					<Button Classes="MyCaption"
-							Command="{Binding GoHomeCommand}"
-							Margin="0,0,8,0"
-							ToolTip.Tip="Return Home"
-							IsVisible="{Binding IsHomeVisible}">
-						<Path Width="12" Height="12"
-							  Data="M0 8 L6 2 L12 8 V14 H7 V10 H5 V14 H0 Z"
-							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-							  StrokeThickness="1"/>
+					<Button
+						Classes="HeaderButton"
+						Command="{Binding GoHomeCommand}"
+						ToolTip.Tip="Return Home"
+						IsVisible="{Binding IsHomeVisible}">
+						<Path
+							Width="16" Height="16"
+							StrokeThickness="1"
+							Stretch="Uniform"
+							Data="{StaticResource PlugHub.HomeIconGeometry}"
+							Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 					</Button>
 
 					<!-- Minimize -->
-					<Button Classes="MyCaption"
-							Command="{Binding MinimizeCommand}">
-						<Rectangle Width="10" Height="2"
-								   Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-								   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+					<Button
+						Classes="HeaderButton"
+						Command="{Binding MinimizeCommand}">
+						<Path
+							Width="8" Height="2"
+							StrokeThickness="2"
+							Stretch="Uniform"
+							Data="{StaticResource PlugHub.MinimizeIconGeometry}"
+							Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 					</Button>
 
 					<!-- Maximize -->
-					<Button Classes="MyCaption"
-							Command="{Binding MaximizeRestoreCommand}"
-							IsVisible="{Binding IsMaximizeVisible}">
-						<Path Width="10" Height="10"
-							  Data="M0 0 H10 V10 H0 Z"
-							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-							  StrokeThickness="1.5"
-							  Stretch="Uniform"
-							  HorizontalAlignment="Center"
-							  VerticalAlignment="Center"/>
+					<Button
+						Classes="HeaderButton"
+						Command="{Binding MaximizeRestoreCommand}"
+						IsVisible="{Binding IsMaximizeVisible}">
+						<Path
+							Width="8" Height="8"
+							StrokeThickness="2"
+							Stretch="Uniform"
+							Data="{StaticResource PlugHub.MaximizeIconGeometry}"
+							Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 					</Button>
 
 					<!-- Restore -->
-					<Button Classes="MyCaption"
-							Command="{Binding MaximizeRestoreCommand}"
-							IsVisible="{Binding IsRestoreVisible}">
-						<Grid Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-							<Path Data="M2 0 H10 V8 H2 Z"
-								  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-								  StrokeThickness="1.5"/>
-							<Path Data="M0 2 H8 V10 H0 Z"
-								  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-								  StrokeThickness="1.5"/>
-						</Grid>
+					<Button
+						Classes="HeaderButton"
+						Command="{Binding MaximizeRestoreCommand}"
+						IsVisible="{Binding IsRestoreVisible}">
+						<Path
+							Width="8" Height="8"
+							StrokeThickness="2"
+							Stretch="Uniform"
+							Data="{StaticResource PlugHub.RestoreIconGeometry}"
+							Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 					</Button>
 
 					<!-- Close -->
-					<Button Classes="MyCaption"
-							Command="{Binding CloseCommand}">
-						<Path Width="10" Height="10"
-							  Data="M0 0 L10 10 M10 0 L0 10"
-							  Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"
-							  StrokeThickness="1.5"
-							  StrokeLineCap="Square"
-							  Stretch="Uniform"
-							  HorizontalAlignment="Center"
-							  VerticalAlignment="Center"/>
+					<Button
+						Classes="HeaderButton Close"
+						Name="CloseButton"
+						Command="{Binding CloseCommand}">
+						<Path
+							Width="8" Height="8"
+							StrokeThickness="2"
+							Stretch="Uniform"
+							Data="{StaticResource PlugHub.CloseIconGeometry}"
+							Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 					</Button>
 
 				</StackPanel>
